# autonomous_driving

./: .gitattributes  .gitignore  .gitlab-ci.yml  README.md  assystem-arch-meetinging.txt  platooning_architecture.xml  risikoanalyse.tex  setup_ros1.sh  setup_ros1_odroid.sh  vm.md
catkin_ws/install/share/platooning/: package.xml
catkin_ws/install/share/platooning/cmake/: platooning-msg-extras.cmake  platooning-msg-paths.cmake  platooningConfig.cmake
catkin_ws/install/share/platooning/launch/: environment_mapping.launch  lanekeeping.launch  messagedistribution.launch  moduletest_prioritization.launch  platooning.launch  stmsim.launch  userinterface.launch
catkin_ws/install/share/platooning/msg/: distanceToObj.msg  remotecontrolToggle.msg
catkin_ws/install/share/platooning/plugins/: moduletest_platooning.xml
catkin_ws/src/platooning/: CMakeLists.txt  EnvironmentMapping.launch  client.cpp  environment_mapping.launch  nodelet_plugins.xml  nodelets.xml  package.xml  rosdoc.yaml  testsnippet.cpp  testsnippet.hpp
catkin_ws/src/platooning/doc/: manifest.yaml
catkin_ws/src/platooning/doc/html/: CMakeCXXCompilerId_8cpp.html  EnvironmentMapping_8cpp__incl.map  EnvironmentMapping_8hpp.html  EnvironmentMapping_8hpp__dep__incl.map  EnvironmentMapping_8hpp__incl.md5  EnvironmentMapping_8hpp_source.html  LaneKeeping_8cpp.html  LaneKeeping_8cpp__incl.map  LaneKeeping_8cpp_source.html  LaneKeeping_8hpp.html  LaneKeeping_8hpp__dep__incl.map  LaneKeeping_8hpp__incl.map  LaneKeeping_8hpp__incl.md5  LaneKeeping_8hpp_source.html  Priorization_8cpp.html  Priorization_8cpp__incl.map  Priorization_8cpp__incl.md5  Priorization_8cpp_source.html  Priorization_8hpp__incl.map  Protocol_8cpp.html  Protocol_8cpp__incl.map  Protocol_8cpp__incl.md5  Protocol_8cpp_source.html  Protocol_8hpp.html  Protocol_8hpp__incl.map  Protocol_8hpp__incl.md5  Protocol_8hpp_source.html  RemoteControl_8cpp.html  RemoteControl_8cpp__incl.map  RemoteControl_8cpp__incl.md5  RemoteControl_8cpp_source.html  RemoteControl_8hpp__dep__incl.map  RemoteControl_8hpp__incl.map  RemoteControl_8hpp__incl.md5  RemoteControl_8hpp_source.html  Template_8cpp__incl.map  Template_8cpp__incl.md5  Template_8hpp.html  Template_8hpp__dep__incl.map  Template_8hpp__incl.md5  (+93 more)
catkin_ws/src/platooning/include/: MessageDistribution.hpp  MessageTypes.hpp  Platooning.hpp  PlatooningNode.hpp  Prioritization.hpp  Priorization.hpp  RadioInterface.hpp  Template.hpp  Topics.hpp  UdpServer.hpp  UserInterface.hpp  VehicleControl.hpp
catkin_ws/src/platooning/include/platooning/: EnvironmentMapping.hpp  LaneDetect.hpp  LaneKeeping.hpp  LongitudinalControl.hpp  LongitudinalProcessing.hpp  MessageDistribution.hpp  MessageTypes.hpp  Platooning.hpp  Prioritization.hpp  Priorization.hpp  Protocol.hpp  RadioInterface.hpp  RemoteControl.hpp  ServiceTypes.hpp  StmSim.hpp  Template.hpp  Topics.hpp  UdpPackage.hpp  UdpPackageSet.cpp  UdpPackageSet.hpp  UdpServer.hpp  UserInterface.hpp  VehicleControl.hpp  Wifi.hpp
catkin_ws/src/platooning/include/tests/: Moduletest.hpp  Moduletest_protocol.hpp  Moduletest_wifi.hpp
catkin_ws/src/platooning/launch/: environment_mapping.launch  lanedetect.launch  lanekeeping.launch  longitudinalcontrol.launch  longitudinalprocessing.launch  messagedistribution.launch  moduletest_protocol.launch  moduletest_protocol.test  moduletest_wifi.launch  moduletest_wifi.test  nodeletmanager.launch  platooning.launch  prioritization.launch  priorization.launch  protocol.launch  radiointerface.launch  remotecontrol.launch  run_platoon.launch  stmsim.launch  template.launch  testrunner.launch  userinterface.launch  vehiclecontrol.launch  wifi.launch
catkin_ws/src/platooning/msg/: acceleration.msg  distanceToObj.msg  enableRemoteControl.msg  forcedDrivingVector.msg  oughtData.msg  platoonProtocol.msg  platoonProtocolOut.msg  platooningAction.msg  remoteDrivingVector.msg  remotecontrolInput.msg  userInterface.msg
catkin_ws/src/platooning/msg/platooning/: fv_leave.msg  lv_accept.msg  lv_broadcast.msg  platooningState.msg  vehicleId.msg
catkin_ws/src/platooning/msg/remotecontrol/: platooningToggle.msg  (+2 more)
catkin_ws/src/platooning/plugins/: environment_mapping.xml  lanekeeping.xml  longitudinalcontrol.xml  longitudinalprocessing.xml  messagedistribution.xml  moduletest_protocol.xml  moduletest_wifi.xml  nodelet_plugins.xml  platooning.xml  priorization.xml  protocol.xml  remotecontrol.xml  stmsim.xml  template.xml  testrunner.xml  vehiclecontrol.xml  wifi.xml
catkin_ws/src/platooning/src/: EnvironmentMapping.cpp  EnvironmentMapping.h  LaneDetect.cpp  LaneKeeping.cpp  LongitudinalControl.cpp  LongitudinalProcessing.cpp  MessageDistribution.cpp  MessageTypes.cpp  Platooning.cpp  PlatooningNode.cpp  Prioritization.cpp  Priorization.cpp  Protocol.cpp  RadioInterface.cpp  RemoteControl.cpp  RemoteControlNodelet.cpp  StmSim.cpp  Template.cpp  UdpPackage.cpp  UdpPackageSet.cpp  UdpServer.cpp  UserInterface.cpp  VehicleControl.cpp  Wifi.cpp  dummy.h  platooning_node.cpp
catkin_ws/src/platooning/test/: Moduletest.cpp  Moduletest_protocol.cpp  Moduletest_wifi.cpp  Pcap.cpp  integrationtest_template.cpp  moduletest_template.cpp  test_platooning.cpp  testrunner.cpp  unittest_protocol.cpp  unittest_template.cpp  unittest_udpserver.cpp
catkin_ws/src/platooning_sim/: CMakeLists.txt  package.xml
catkin_ws/src/platooning_sim/include/: gazeboadapter.hpp  topics.hpp
catkin_ws/src/platooning_sim/launch/: gazebo.launch  prius1.launch  prius2.launch  sim.launch  sim_1car.launch  sim_2cars.launch  sim_3cars.launch  world.launch
catkin_ws/src/platooning_sim/plugins/: PriusHybridPlugin.cc
catkin_ws/src/platooning_sim/src/: gazeboadapter.cpp
catkin_ws/src/platooning_sim/worlds/: mcity.world
catkin_ws/src/testnodelet/: CMakeLists.txt  nodelets.xml  package.xml
catkin_ws/src/testnodelet/include/: listener.hpp
catkin_ws/src/testnodelet/src/: listener.cpp  listenerTalkerNode.cpp  talker.hpp  talkerNodelet.cpp
modules/platooning_ws/src/platooning/: CMakeLists.txt  package.xml
modules/sim_ws/src/platooning_sim/: CMakeLists.txt  package.xml
(+1070 files in other folders)
