<?xml version="1.0"?>
<package format="2">
    <name>platooning</name>
    <version>0.0.1</version>
    <description>The platooning package</description>

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <!-- Example:  -->
    <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
    <maintainer email="lorenzbq@informatik.hu-berlin.de">Benjamin</maintainer>
    <maintainer email="heydenjq@informatik.hu-berlin.de">Jonas</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <doc_depend>doxygen</doc_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>nodelet</build_depend>
    <build_depend>roslint</build_depend>
    <build_depend>message_generation</build_depend>

    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>nodelet</build_export_depend>
    <build_export_depend>boost</build_export_depend>

    <exec_depend>roscpp</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>nodelet</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <test_depend>rosunit</test_depend>
    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <nodelet plugin="${prefix}/plugins/environment_mapping.xml"/>
        <nodelet plugin="${prefix}/plugins/lanedetect.xml"/>
        <nodelet plugin="${prefix}/plugins/prioritization.xml"/>
        <nodelet plugin="${prefix}/plugins/messagedistribution.xml"/>
        <nodelet plugin="${prefix}/plugins/userinterface.xml"/>
        <nodelet plugin="${prefix}/plugins/vehiclecontrol.xml"/>
        <nodelet plugin="${prefix}/plugins/radiointerface.xml"/>
        <nodelet plugin="${prefix}/plugins/platooning.xml"/>
        <nodelet plugin="${prefix}/plugins/lanedetect.xml"/>
        <nodelet plugin="${prefix}/plugins/longitudinalcontrol.xml"/>
        <nodelet plugin="${prefix}/plugins/stmsim.xml"/>
        <rosdoc config="rosdoc.yaml"/>

        <!-- testing -->
        <nodelet plugin="${prefix}/testing/plugins/moduletest_messagedistribution.xml"/>
        <nodelet plugin="${prefix}/testing/plugins/moduletest_radiointerface.xml"/>
        <nodelet plugin="${prefix}/testing/plugins/moduletest_platooning.xml"/>
        <nodelet plugin="${prefix}/testing/plugins/moduletest_longitudinalcontrol.xml"/>

    </export>
</package>
